# secret_share

./: .gitignore  README.md  manage.py  pyproject.toml  setup.py
secret_share/: settings.py  urls.py  wsgi.py
secret_share/scripts/: manage.py
secret_share/settings/: base.py  test.py
secret_share/templates/user_shares/: add.html
secret_share/user_shares/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
secret_share/user_shares/migrations/: 0001_initial.py
secret_share/users/: admin.py  apps.py  models.py
secret_share/users/middleware/: __init__.py
secret_share/users/migrations/: 0001_initial.py
templates/user_shares/: get.html  info.html  stats-daily.html
