[tool.poetry]
name = "secret_share"
version = "0.1.0"
description = "Simple private file and URL sharing"
authors = ["Przemysław Palacz <pprzemal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
