[tool.poetry]
name = "secret_share"
version = "0.1.0"
description = "Simple private file and URL sharing"
authors = ["Przemysław Palacz <pprzemal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[tool.poetry.scripts]
manage = "secret_share.scripts.manage:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
